--- a/index.html
+++ b/index.html
@@ -3,31 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Twitch Stream</title>
+    <title>Sportwave Live Stream</title>
     <script src="https://embed.twitch.tv/embed/v1.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #18181b;
+            background-color: #141414;
             color: white;
             margin: 0;
             padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
         }
-        #twitch-embed {
+        h1 {
+            font-size: 2rem;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+        .content {
             width: 80%;
             height: 600px;
-            margin: auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(255, 255, 255, 0.2);
         }
     </style>
 </head>
 <body>
-    <h1>Watch My Twitch Stream</h1>
-    <div id="twitch-embed"></div>
+    <h1>Sportwave Live Stream</h1>
+    <div id="stream" class="content">
+        <div id="twitch-embed"></div>
+    </div>
     <script>
         new Twitch.Embed("twitch-embed", {
-            width: "80%",
-            height: 600,
+            width: "100%",
+            height: "100%",
             channel: "mulletstv",
             layout: "video",
             autoplay: true
