--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script src="https://embed.twitch.tv/embed/v1.js"></script>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #141414;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(to bottom, #0b3d91, #092e6e);
             color: white;
             margin: 0;
             padding: 0;
@@ -17,21 +17,47 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
+            text-align: center;
+            position: relative;
+            overflow: hidden;
         }
         h1 {
-            font-size: 2rem;
+            font-size: 2.5rem;
             font-weight: bold;
             margin-bottom: 20px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            background: linear-gradient(to right, #f8b500, #ffdd00);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            position: relative;
+            z-index: 2;
         }
         .content {
             width: 80%;
             height: 600px;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(255, 255, 255, 0.2);
+            border-radius: 15px;
+            box-shadow: 0 4px 20px rgba(255, 255, 255, 0.3);
+            overflow: hidden;
+            border: 4px solid #f8b500;
+            position: relative;
+            z-index: 2;
+            background: rgba(0, 0, 0, 0.8);
+        }
+        .stadium-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('https://upload.wikimedia.org/wikipedia/commons/d/de/Soccer_field_-_empty.jpg') no-repeat center center/cover;
+            opacity: 0.3;
+            z-index: 1;
         }
     </style>
 </head>
 <body>
+    <div class="stadium-overlay"></div>
     <h1>Sportwave Live Stream</h1>
     <div id="stream" class="content">
         <div id="twitch-embed"></div>
@@ -40,7 +66,7 @@
         new Twitch.Embed("twitch-embed", {
             width: "100%",
             height: "100%",
-            channel: "mulletstv",
+            channel: "YOUR_TWITCH_USERNAME",
             layout: "video",
             autoplay: true
         });
