--- a/index.html
+++ b/index.html
@@ -50,9 +50,13 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('https://upload.wikimedia.org/wikipedia/commons/d/de/Soccer_field_-_empty.jpg') no-repeat center center/cover;
+            background: url('https://images.unsplash.com/photo-1487466365202-1afdb86c764e?q=80&w=2073&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center/cover;
             opacity: 0.3;
             z-index: 1;
+        }
+        #twitch-embed {
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
