--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             position: absolute;
             top: 20px;
             left: 20px;
-            width: 100px;
+            width: 150px; /* Increased size */
             height: auto;
         }
         .title-image {
-            width: 300px;
+            width: 500px; /* Increased size */
             height: auto;
             margin-bottom: 20px;
             position: relative;
