--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(to bottom, #0b3d91, #092e6e);
+            background: #141414; /* Dark background similar to Netflix */
             color: white;
             margin: 0;
             padding: 0;
@@ -23,21 +23,22 @@
         }
         .logo {
             position: absolute;
-            top: 20px;
-            left: 20px;
-            width: 150px; /* Increased size */
+            top: 30px;
+            left: 30px;
+            width: 150px;
             height: auto;
         }
         .title-image {
-            width: 500px; /* Increased size */
+            width: 600px;
             height: auto;
             margin-bottom: 20px;
             position: relative;
             z-index: 2;
         }
         .content {
-            width: 80%;
-            height: 600px;
+            width: 90%;
+            max-width: 1200px;
+            height: 700px;
             border-radius: 15px;
             box-shadow: 0 4px 20px rgba(255, 255, 255, 0.3);
             overflow: hidden;
@@ -53,12 +54,26 @@
             width: 100%;
             height: 100%;
             background: url('https://images.unsplash.com/photo-1487466365202-1afdb86c764e?q=80&w=2073&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center/cover;
-            opacity: 0.3;
+            opacity: 0.2;
             z-index: 1;
         }
         #twitch-embed {
             width: 100%;
             height: 100%;
+            border-radius: 15px;
+        }
+        .footer {
+            position: absolute;
+            bottom: 20px;
+            left: 0;
+            right: 0;
+            text-align: center;
+            font-size: 14px;
+            color: #aaa;
+        }
+        .footer a {
+            color: #f8b500;
+            text-decoration: none;
         }
     </style>
 </head>
@@ -78,5 +93,8 @@
             autoplay: true
         });
     </script>
+    <div class="footer">
+        <p>&copy; 2025 Sportwave. All rights reserved. <a href="#">Terms</a> | <a href="#">Privacy</a></p>
+    </div>
 </body>
 </html>
