--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             height: auto;
         }
         .title-image {
-            width: 600px;
+            width: 600px; /* Adjusted size */
             height: auto;
-            margin-bottom: 20px;
+            margin-bottom: 10px; /* Reduced margin to make it closer to the player */
             position: relative;
             z-index: 2;
         }
