--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             height: auto;
         }
         .title-image {
-            width: 600px; /* Adjusted size */
+            width: 600px;
             height: auto;
-            margin-bottom: 10px; /* Reduced margin to make it closer to the player */
+            margin-bottom: 10px;
             position: relative;
             z-index: 2;
         }
@@ -75,6 +75,37 @@
             color: #f8b500;
             text-decoration: none;
         }
+        .featured-videos {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 30px;
+            width: 90%;
+            max-width: 1200px;
+        }
+        .featured-video {
+            position: relative;
+            width: 18%;
+            height: auto;
+            cursor: pointer;
+            border-radius: 10px;
+        }
+        .featured-video img {
+            width: 100%;
+            border-radius: 10px;
+        }
+        .watch-now {
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: rgba(0, 0, 0, 0.7);
+            color: #fff;
+            padding: 10px 20px;
+            font-size: 16px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -92,7 +123,50 @@
             layout: "video",
             autoplay: true
         });
+
+        // Function to update the stream player with a new video
+        function loadVideo(videoId) {
+            const twitchEmbed = document.getElementById('twitch-embed');
+            twitchEmbed.innerHTML = ''; // Clear the existing embed
+            new Twitch.Embed("twitch-embed", {
+                width: "100%",
+                height: "100%",
+                channel: videoId, // Replace this with YouTube video ID
+                layout: "video",
+                autoplay: true
+            });
+        }
     </script>
+
+    <!-- Featured Videos Row -->
+    <div class="featured-videos">
+        <!-- Video 1 -->
+        <div class="featured-video" onclick="loadVideo('_M9_8g4mkeE&t=645s')">
+            <img src="https://img.youtube.com/vi/VIDEO_ID_1/maxresdefault.jpg" alt="Featured Video 1">
+            <div class="watch-now">Watch Now</div>
+        </div>
+        <!-- Video 2 -->
+        <div class="featured-video" onclick="loadVideo('ewcmAxTT-0s&t=29s')">
+            <img src="https://img.youtube.com/vi/VIDEO_ID_2/maxresdefault.jpg" alt="Featured Video 2">
+            <div class="watch-now">Watch Now</div>
+        </div>
+        <!-- Video 3 -->
+        <div class="featured-video" onclick="loadVideo('lfYBilaS-gM&t=17s')">
+            <img src="https://img.youtube.com/vi/VIDEO_ID_3/maxresdefault.jpg" alt="Featured Video 3">
+            <div class="watch-now">Watch Now</div>
+        </div>
+        <!-- Video 4 -->
+        <div class="featured-video" onclick="loadVideo('FyPjjYPks9E&t=38s')">
+            <img src="https://img.youtube.com/vi/VIDEO_ID_4/maxresdefault.jpg" alt="Featured Video 4">
+            <div class="watch-now">Watch Now</div>
+        </div>
+        <!-- Video 5 -->
+        <div class="featured-video" onclick="loadVideo('VIDEO_ID_5')">
+            <img src="https://img.youtube.com/vi/VIDEO_ID_5/maxresdefault.jpg" alt="Featured Video 5">
+            <div class="watch-now">Watch Now</div>
+        </div>
+    </div>
+
     <div class="footer">
         <p>&copy; 2025 Sportwave. All rights reserved. <a href="#">Terms</a> | <a href="#">Privacy</a></p>
     </div>
