--- a/index.html
+++ b/index.html
@@ -75,6 +75,22 @@
             color: #f8b500;
             text-decoration: none;
         }
+        /* Join Discord Button Styles */
+        .discord-btn {
+            background-color: #7289da; /* Discord blue */
+            color: white;
+            font-size: 18px;
+            font-weight: bold;
+            padding: 15px 30px;
+            border-radius: 30px;
+            border: none;
+            margin-top: 20px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .discord-btn:hover {
+            background-color: #5b6eae; /* Darker blue on hover */
+        }
     </style>
 </head>
 <body>
@@ -93,6 +109,11 @@
             autoplay: true
         });
     </script>
+
+    <!-- Discord Button -->
+    <a href="https://discord.gg/6hnTt6xqvh" target="_blank">
+        <button class="discord-btn">Join our Discord</button>
+    </a>
 
     <div class="footer">
         <p>&copy; 2025 Sportwave. All rights reserved. <a href="#">Terms</a> | <a href="#">Privacy</a></p>
