--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            height: 100vh;
+            justify-content: flex-start;
+            min-height: 100vh;
             text-align: center;
             position: relative;
-            overflow: hidden;
+            overflow-y: auto; /* Allow scrolling */
         }
         .logo {
             position: absolute;
@@ -31,6 +31,7 @@
         .title-image {
             width: 600px;
             height: auto;
+            margin-top: 100px; /* Adjusted to give space for logo */
             margin-bottom: 10px;
             position: relative;
             z-index: 2;
@@ -63,13 +64,14 @@
             border-radius: 15px;
         }
         .footer {
-            position: absolute;
+            position: relative;
             bottom: 20px;
             left: 0;
             right: 0;
             text-align: center;
             font-size: 14px;
             color: #aaa;
+            padding: 20px;
         }
         .footer a {
             color: #f8b500;
