--- a/index.html
+++ b/index.html
@@ -15,31 +15,31 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: flex-start;
-            min-height: 100vh;
+            justify-content: center;
+            height: 100vh;
             text-align: center;
             position: relative;
-            overflow-y: auto; /* Allow scrolling */
+            overflow: hidden; /* Prevent scrolling */
         }
         .logo {
             position: absolute;
-            top: 30px;
-            left: 30px;
-            width: 150px;
+            top: 20px;
+            left: 20px;
+            width: 120px;
             height: auto;
         }
         .title-image {
             width: 600px;
             height: auto;
-            margin-top: 100px; /* Adjusted to give space for logo */
-            margin-bottom: 10px;
+            margin-top: 70px; /* Adjusted for logo */
+            margin-bottom: 20px;
             position: relative;
             z-index: 2;
         }
         .content {
             width: 90%;
             max-width: 1200px;
-            height: 700px;
+            height: 500px; /* Adjusted height to fit content */
             border-radius: 15px;
             box-shadow: 0 4px 20px rgba(255, 255, 255, 0.3);
             overflow: hidden;
@@ -63,6 +63,22 @@
             height: 100%;
             border-radius: 15px;
         }
+        .discord-btn {
+            background-color: #7289da; /* Discord blue */
+            color: white;
+            font-size: 18px;
+            font-weight: bold;
+            padding: 15px 30px;
+            border-radius: 30px;
+            border: none;
+            margin-top: 20px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            z-index: 3;
+        }
+        .discord-btn:hover {
+            background-color: #5b6eae; /* Darker blue on hover */
+        }
         .footer {
             position: relative;
             bottom: 20px;
@@ -76,22 +92,6 @@
         .footer a {
             color: #f8b500;
             text-decoration: none;
-        }
-        /* Join Discord Button Styles */
-        .discord-btn {
-            background-color: #7289da; /* Discord blue */
-            color: white;
-            font-size: 18px;
-            font-weight: bold;
-            padding: 15px 30px;
-            border-radius: 30px;
-            border: none;
-            margin-top: 20px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-        .discord-btn:hover {
-            background-color: #5b6eae; /* Darker blue on hover */
         }
     </style>
 </head>
