--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         new Twitch.Embed("twitch-embed", {
             width: "100%",
             height: "100%",
-            channel: "YOUR_TWITCH_USERNAME",
+            channel: "sportwavelive",
             layout: "video",
             autoplay: true
         });
