--- a/videos.html
+++ b/videos.html
@@ -171,7 +171,7 @@
 
     <script>
         const showHeroVideo = true; 
-        const heroVideoId = "lkuO_hhKtfI&list=PLMIJWKsvF7KqrtVTT_H6YvS3auYIAqp26"; 
+        const heroVideoId = "lkuO_hhKtfI?si=TgEbCF5Xhcw2REBB"; 
 
         if (showHeroVideo) {
             document.getElementById("hero-video-container").innerHTML = `
