--- a/videos.html
+++ b/videos.html
@@ -149,14 +149,14 @@
     <div class="gallery" id="videoGallery">
         <!-- YouTube Video -->
         <div class="video" data-category="sportwave" data-title="Sportwave Highlight 1">
-            <iframe width="320" height="180" src="https://www.youtube.com/embed/YOUR_VIDEO_ID_1" frameborder="0" allowfullscreen></iframe>
-            <p class="video-title">Sportwave Highlight 1</p>
+            <iframe width="320" height="180" src="https://www.youtube.com/embed/lQlNqUKezTo" frameborder="0" allowfullscreen></iframe>
+            <p class="video-title">Ajax VS Arsenal | Full Match</p>
         </div>
 
         <!-- Twitch Video -->
         <div class="video" data-category="match" data-title="Twitch Stream Replay">
-            <iframe width="320" height="180" src="https://player.twitch.tv/?video=YOUR_TWITCH_VIDEO_ID&parent=YOUR_DOMAIN" frameborder="0" allowfullscreen></iframe>
-            <p class="video-title">Twitch Stream Replay</p>
+            <iframe width="320" height="180" src="https://player.twitch.tv/?video=2384871817&parent=https://vrfswave.github.io/Sportwave/videos" frameborder="0" allowfullscreen></iframe>
+            <p class="video-title">Barcelona VS RB Leipzig Full Match | VFA TITLE DRAMA</p>
         </div>
 
         <!-- TikTok Video -->
