--- a/videos.html
+++ b/videos.html
@@ -155,7 +155,7 @@
 
         <!-- Twitch Video -->
         <div class="video" data-category="match" data-title="Twitch Stream Replay">
-            <iframe width="320" height="180" src="https://player.twitch.tv/?video=2384871817&parent=https://vrfswave.github.io/Sportwave/videos" frameborder="0" allowfullscreen></iframe>
+            <iframe width="320" height="180" src="https://player.twitch.tv/?video=2384871817&parent=https://vrfswave.github.io" frameborder="0" allowfullscreen></iframe>
             <p class="video-title">Barcelona VS RB Leipzig Full Match | VFA TITLE DRAMA</p>
         </div>
 
