--- a/videos.html
+++ b/videos.html
@@ -153,19 +153,13 @@
             <p class="video-title">Ajax VS Arsenal | Full Match</p>
         </div>
 
-        <!-- Twitch Video -->
-        <div class="video" data-category="match" data-title="Twitch Stream Replay">
-            <iframe width="320" height="180" src="https://player.twitch.tv/?video=2384871817&parent=https://vrfswave.github.io" frameborder="0" allowfullscreen></iframe>
-            <p class="video-title">Barcelona VS RB Leipzig Full Match | VFA TITLE DRAMA</p>
-        </div>
-
         <!-- TikTok Video -->
         <div class="video tiktok" data-category="creator" data-title="TikTok Goal Compilation">
-            <blockquote class="tiktok-embed" cite="https://www.tiktok.com/YOUR_TIKTOK_VIDEO_URL" data-video-id="YOUR_TIKTOK_VIDEO_ID">
+            <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@cntrfooty/video/7473616689825959190" data-video-id="7473616689825959190">
                 <section></section>
             </blockquote> 
             <script async src="https://www.tiktok.com/embed.js"></script>
-            <p class="video-title">TikTok Goal Compilation</p>
+            <p class="video-title">Goal Poachers VR | CNRTLFOOTY</p>
         </div>
     </div>
 
