--- a/videos.html
+++ b/videos.html
@@ -153,16 +153,22 @@
             <p class="video-title">Ajax VS Arsenal | Full Match</p>
         </div>
 
-        <!-- TikTok Video -->
-        <div class="video tiktok" data-category="creator" data-title="Goal Poachers VR | CNRTLFOOTY">
-            <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@cntrfooty/video/7473616689825959190" data-video-id="7473616689825959190">
-                <section></section>
-            </blockquote> 
-            <script async src="https://www.tiktok.com/embed.js"></script>
-            <p class="video-title">Goal Poachers VR | CNRTLFOOTY</p>
+    <div class="gallery" id="videoGallery">
+        <!-- YouTube Video -->
+        <div class="video" data-category="sportwave" data-title="Ajax VS Arsenal | Full Match">
+            <iframe width="320" height="180" src="https://www.youtube.com/embed/lQlNqUKezTo" frameborder="0" allowfullscreen></iframe>
+            <p class="video-title">PLACEHOLDER</p>
         </div>
-    </div>
 
+
+            <div class="gallery" id="videoGallery">
+        <!-- YouTube Video -->
+        <div class="video" data-category="sportwave" data-title="Ajax VS Arsenal | Full Match">
+            <iframe width="320" height="180" src="https://www.youtube.com/embed/lQlNqUKezTo" frameborder="0" allowfullscreen></iframe>
+            <p class="video-title">PLACEHOLDER</p>
+        </div>
+
+                
     <script>
         const showHeroVideo = true; 
         const heroVideoId = "lkuO_hhKtfI?si=TgEbCF5Xhcw2REBB"; 
