--- a/imagemaker.html
+++ b/imagemaker.html
@@ -106,10 +106,10 @@
             const badgeWidth = 180;
             const badgeHeight = 180;
 
-            // Define positions for badges
-            const badge1X = 100;
+            // Define positions for badges (spaced further apart)
+            const badge1X = 60;  // Increased distance from left
             const badge1Y = 110;
-            const badge2X = 320;
+            const badge2X = 360; // Increased distance from right
             const badge2Y = 110;
 
             // Draw both badges with the same size
