--- a/imagemaker.html
+++ b/imagemaker.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football Badge Graphic Maker</title>
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -20,8 +21,10 @@
         h1 {
             color: #fff;
         }
-        input[type="file"] {
+        input[type="file"], input[type="text"] {
             margin: 10px 0;
+            padding: 8px;
+            font-size: 16px;
         }
         button {
             padding: 10px 20px;
@@ -48,9 +51,10 @@
 <body>
     <div class="container">
         <h1>Football Badge Graphic Maker</h1>
-        <p>Upload two football club badges to generate a graphic.</p>
+        <p>Upload two football club badges and enter match details.</p>
         <input type="file" id="badge1" accept="image/*"><br>
         <input type="file" id="badge2" accept="image/*"><br>
+        <input type="text" id="customText" placeholder="Enter match details (e.g. Manchester Derby)"><br>
         <button onclick="generateGraphic()">Generate Graphic</button><br><br>
         
         <canvas id="canvas" width="600" height="400"></canvas><br><br>
@@ -64,7 +68,7 @@
         let badge1 = null;
         let badge2 = null;
         let background = new Image();
-        background.src = 'https://i.ibb.co/MDbx54hm/image.png'; // New canvas background
+        background.src = 'https://i.ibb.co/MDbx54hm/image.png'; // Canvas background image
 
         // Event listeners for the file inputs
         document.getElementById('badge1').addEventListener('change', handleFileSelect);
@@ -96,6 +100,9 @@
                 return;
             }
 
+            // Get custom text from input field
+            const customText = document.getElementById('customText').value.trim();
+
             // Clear the canvas before drawing new images
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
@@ -108,13 +115,21 @@
 
             // Define positions for badges (spaced further apart)
             const badge1X = 60;  // Increased distance from left
-            const badge1Y = 110;
+            const badge1Y = 100;
             const badge2X = 360; // Increased distance from right
-            const badge2Y = 110;
+            const badge2Y = 100;
 
             // Draw both badges with the same size
             ctx.drawImage(badge1, badge1X, badge1Y, badgeWidth, badgeHeight);
             ctx.drawImage(badge2, badge2X, badge2Y, badgeWidth, badgeHeight);
+
+            // Draw custom text if entered
+            if (customText) {
+                ctx.font = "30px 'League Spartan', sans-serif"; // Set font style
+                ctx.fillStyle = "white"; // Text color
+                ctx.textAlign = "center"; // Center text
+                ctx.fillText(customText, canvas.width / 2, 320); // Position text below badges
+            }
         }
 
         // Allow user to download the generated graphic
