--- a/imagemaker.html
+++ b/imagemaker.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football Badge Graphic Maker</title>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&family=Orbitron:wght@500&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'League Spartan', sans-serif;
@@ -13,7 +13,7 @@
             align-items: center;
             height: 100vh;
             flex-direction: column;
-            background-color: #121212; /* Dark background */
+            background: #0d0d0d;
             color: white;
             margin: 0;
             padding: 0;
@@ -21,82 +21,96 @@
 
         .container {
             text-align: center;
-            background: #1e1e1e;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.1);
-            max-width: 600px;
+            background: linear-gradient(145deg, #1a1a1a, #222);
+            padding: 25px;
+            border-radius: 12px;
+            box-shadow: 0px 4px 20px rgba(255, 255, 255, 0.08);
+            max-width: 650px;
+            border: 2px solid #333;
         }
 
         h1 {
+            font-family: 'Orbitron', sans-serif;
             margin-bottom: 10px;
-            font-size: 24px;
+            font-size: 26px;
+            color: #ffcc00;
+            text-shadow: 0px 0px 10px rgba(255, 204, 0, 0.6);
         }
 
         p {
             font-size: 14px;
-            color: #aaa;
+            color: #bbb;
             margin-bottom: 20px;
         }
 
         input[type="file"], textarea {
-            margin: 10px 0;
-            padding: 10px;
+            margin: 12px 0;
+            padding: 12px;
             font-size: 16px;
-            width: 100%;
-            max-width: 400px;
+            width: 90%;
+            max-width: 420px;
             display: block;
-            border: 2px solid #444;
-            background: #222;
+            border: 2px solid #555;
+            background: #181818;
             color: white;
-            border-radius: 5px;
+            border-radius: 8px;
+            outline: none;
+            transition: 0.3s;
         }
 
         textarea {
-            height: 80px;
+            height: 90px;
             resize: none;
             font-family: 'League Spartan', sans-serif;
             text-align: center;
         }
 
+        input[type="file"]:hover, textarea:focus {
+            border-color: #ffcc00;
+            box-shadow: 0px 0px 10px rgba(255, 204, 0, 0.5);
+        }
+
         button {
-            padding: 12px 20px;
+            padding: 14px 24px;
             font-size: 16px;
             cursor: pointer;
-            background-color: #4CAF50;
-            color: white;
+            background: linear-gradient(145deg, #ffcc00, #ffaa00);
+            color: black;
             border: none;
-            border-radius: 5px;
-            margin: 10px 0;
-            width: 100%;
-            max-width: 400px;
+            border-radius: 8px;
+            margin: 12px 0;
+            width: 90%;
+            max-width: 420px;
             font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 1px;
             transition: 0.3s;
         }
 
         button:hover {
-            background-color: #3d8b40;
+            background: linear-gradient(145deg, #ffaa00, #ff9900);
+            box-shadow: 0px 0px 12px rgba(255, 165, 0, 0.7);
         }
 
         canvas {
-            border: 2px solid white;
+            border: 2px solid #ffcc00;
             margin-top: 20px;
             background: black;
             width: 100%;
-            max-width: 600px;
-            border-radius: 5px;
+            max-width: 700px;
+            border-radius: 8px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Football Badge Graphic Maker</h1>
+        <h1>⚽ Football Badge Graphic Maker ⚽</h1>
         <p>Upload two football club badges and enter match details.</p>
         <input type="file" id="badge1" accept="image/*">
         <input type="file" id="badge2" accept="image/*">
         <textarea id="customText" placeholder="Enter match details (each line will be centered)"></textarea>
         <button onclick="generateGraphic()">Generate Graphic</button>
-        <canvas id="canvas" width="800" height="500"></canvas>
+        <canvas id="canvas" width="900" height="500"></canvas>
         <button onclick="downloadImage()">Download Graphic</button>
     </div>
 
@@ -142,26 +156,30 @@
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             ctx.drawImage(background, 0, 0, canvas.width, canvas.height);
 
-            const badgeWidth = 200;
-            const badgeHeight = 200;
-            const badge1X = 120;
+            const badgeWidth = 220;
+            const badgeHeight = 220;
+            const badge1X = 150;
             const badge1Y = 120;
-            const badge2X = 480;
+            const badge2X = 530;
             const badge2Y = 120;
 
             ctx.drawImage(badge1, badge1X, badge1Y, badgeWidth, badgeHeight);
             ctx.drawImage(badge2, badge2X, badge2Y, badgeWidth, badgeHeight);
 
-            ctx.font = "30px 'League Spartan', sans-serif"; 
-            ctx.fillStyle = "white"; 
+            ctx.font = "32px 'League Spartan', sans-serif"; 
+            ctx.fillStyle = "#ffcc00"; 
             ctx.textAlign = "center";
+            ctx.shadowColor = "#ff9900";
+            ctx.shadowBlur = 8;
 
-            const textStartY = 380;
-            const lineHeight = 35;
+            const textStartY = 400;
+            const lineHeight = 38;
 
             textLines.forEach((line, index) => {
                 ctx.fillText(line, canvas.width / 2, textStartY + (index * lineHeight));
             });
+
+            ctx.shadowBlur = 0; 
         }
 
         function downloadImage() {
