--- a/imagemaker.html
+++ b/imagemaker.html
@@ -168,9 +168,9 @@
 
             const badgeWidth = 180;
             const badgeHeight = 180;
-            const badge1X = 130;
+            const badge1X = 100; // Adjusted for more space
             const badge1Y = 100;
-            const badge2X = 390;
+            const badge2X = 470; // Adjusted for more space
             const badge2Y = 100;
 
             ctx.drawImage(badge1, badge1X, badge1Y, badgeWidth, badgeHeight);
