--- a/imagemaker.html
+++ b/imagemaker.html
@@ -169,7 +169,7 @@
             const badgeWidth = 180;
             const badgeHeight = 180;
             const centerX = canvas.width / 2; // Calculate the center of the canvas
-            const badgeSpacing = 50; // Space between the two badges
+            const badgeSpacing = 80; // Updated space between the two badges
 
             const badge1X = centerX - badgeWidth - badgeSpacing; // Position the first badge to the left of the center
             const badge2X = centerX + badgeSpacing; // Position the second badge to the right of the center
