--- a/imagemaker.html
+++ b/imagemaker.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football Badge Graphic Maker</title>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&family=Orbitron:wght@500&family=Roboto:wght@700&family=Oswald:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&family=Orbitron:wght@500&family=Roboto:wght@700&family=Oswald:wght@600&family=Raleway:wght@700&family=Anton&family=Lora&family=Quicksand:wght@500&family=Open+Sans:wght@400&family=PT+Sans:wght@700&family=Amatic+SC:wght@700&family=Roboto+Condensed:wght@700&family=Slabo+27px&family=Ubuntu:wght@500&family=Anton&family=Roboto:wght@300&family=Permanent+Marker&family=Lobster&family=Merriweather:wght@700&family=Poppins:wght@600&family=Playfair+Display:wght@400&family=Archivo:wght@500&family=Raleway:wght@900&family=Nunito:wght@400&family=Quicksand:wght@300&family=Roboto:wght@400&family=Quicksand:wght@600&family=Fira+Sans:wght@300&family=Nunito:wght@800&family=Baloo+2:wght@600&family=Inter:wght@600&family=Archivo+Black:wght@900&family=Crimson+Pro:wght@500&family=Fira+Sans:wght@700&family=Julius+Sans+One&family=Anton&family=Open+Sans:wght@300&family=Arimo:wght@700&family=Fredoka+One&family=Abel&family=Work+Sans&family=Oswald&family=Arvo&family=Shadows+Into+Light&family=Cabin:wght@500&family=Bebas+Neue&family=Varela+Round&family=Oswald:wght@400&family=Rokkitt:wght@700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'League Spartan', sans-serif;
@@ -114,10 +114,54 @@
             <option value="'Orbitron', sans-serif">Orbitron</option>
             <option value="'Roboto', sans-serif">Roboto</option>
             <option value="'Oswald', sans-serif">Oswald</option>
+            <option value="'Raleway', sans-serif">Raleway</option>
+            <option value="'Anton', sans-serif">Anton</option>
+            <option value="'Lora', serif">Lora</option>
+            <option value="'Quicksand', sans-serif">Quicksand</option>
+            <option value="'Open Sans', sans-serif">Open Sans</option>
+            <option value="'PT Sans', sans-serif">PT Sans</option>
+            <option value="'Amatic SC', cursive">Amatic SC</option>
+            <option value="'Roboto Condensed', sans-serif">Roboto Condensed</option>
+            <option value="'Slabo 27px', serif">Slabo 27px</option>
+            <option value="'Ubuntu', sans-serif">Ubuntu</option>
+            <option value="'Permanent Marker', cursive">Permanent Marker</option>
+            <option value="'Lobster', cursive">Lobster</option>
+            <option value="'Merriweather', serif">Merriweather</option>
+            <option value="'Poppins', sans-serif">Poppins</option>
+            <option value="'Playfair Display', serif">Playfair Display</option>
+            <option value="'Archivo', sans-serif">Archivo</option>
+            <option value="'Nunito', sans-serif">Nunito</option>
+            <option value="'Quicksand', sans-serif">Quicksand</option>
+            <option value="'Fira Sans', sans-serif">Fira Sans</option>
+            <option value="'Baloo 2', sans-serif">Baloo 2</option>
+            <option value="'Inter', sans-serif">Inter</option>
+            <option value="'Archivo Black', sans-serif">Archivo Black</option>
+            <option value="'Crimson Pro', serif">Crimson Pro</option>
+            <option value="'Julius Sans One', sans-serif">Julius Sans One</option>
+            <option value="'Arimo', sans-serif">Arimo</option>
+            <option value="'Fredoka One', cursive">Fredoka One</option>
+            <option value="'Abel', sans-serif">Abel</option>
+            <option value="'Work Sans', sans-serif">Work Sans</option>
+            <option value="'Arvo', serif">Arvo</option>
+            <option value="'Shadows Into Light', cursive">Shadows Into Light</option>
+            <option value="'Cabin', sans-serif">Cabin</option>
+            <option value="'Bebas Neue', sans-serif">Bebas Neue</option>
+            <option value="'Varela Round', sans-serif">Varela Round</option>
+            <option value="'Rokkitt', serif">Rokkitt</option>
+            <option value="'Pacifico', cursive">Pacifico</option>
+            <option value="'Caveat', cursive">Caveat</option>
+            <option value="'Satisfy', cursive">Satisfy</option>
+            <option value="'Tangerine', cursive">Tangerine</option>
+            <option value="'Lobster Two', cursive">Lobster Two</option>
+            <option value="'Dancing Script', cursive">Dancing Script</option>
+            <option value="'Great Vibes', cursive">Great Vibes</option>
+            <option value="'Bree Serif', serif">Bree Serif</option>
+            <option value="'Zen Dots', sans-serif">Zen Dots</option>
+            <option value="'Rock Salt', cursive">Rock Salt</option>
         </select>
 
         <button onclick="generateGraphic()">Generate Graphic</button>
-        <canvas id="canvas" width="700" height="400"></canvas>
+        <canvas id="canvas" width="60" height="40"></canvas>
         <button onclick="downloadImage()">Download Graphic</button>
     </div>
 
@@ -168,25 +212,25 @@
 
             const badgeWidth = 180;
             const badgeHeight = 180;
-            const centerX = canvas.width / 2; // Calculate the center of the canvas
-            const badgeSpacing = 80; // Updated space between the two badges
+            const centerX = canvas.width / 2;
+            const badgeSpacing = 80;
 
-            const badge1X = centerX - badgeWidth - badgeSpacing; // Position the first badge to the left of the center
-            const badge2X = centerX + badgeSpacing; // Position the second badge to the right of the center
+            const badge1X = centerX - badgeWidth - badgeSpacing;
+            const badge2X = centerX + badgeSpacing;
             const badge1Y = 100;
             const badge2Y = 100;
 
             ctx.drawImage(badge1, badge1X, badge1Y, badgeWidth, badgeHeight);
             ctx.drawImage(badge2, badge2X, badge2Y, badgeWidth, badgeHeight);
 
-            ctx.font = `28px ${selectedFont}`; 
+            ctx.font = `8px ${selectedFont}`;
             ctx.fillStyle = textColor;
             ctx.textAlign = "center";
             ctx.shadowColor = textColor;
             ctx.shadowBlur = glowIntensity;
 
-            const textStartY = 320;
-            const lineHeight = 32;
+            const textStartY = 30;
+            const lineHeight = 8;
 
             textLines.forEach((line, index) => {
                 ctx.fillText(line, canvas.width / 2, textStartY + (index * lineHeight));
